minor code fixes

--- a/app/views/bike_specs/index.html.erb
+++ b/app/views/bike_specs/index.html.erb
@@ -7,7 +7,7 @@
           <div class="sidebar-nav">
                 <ul class="nav nav-list" id = "selection">
                     <legend>Filters</legend>
-                    <li><icons class="icon-chevron-right"><a></a></icons><icons class="icon-chevron-up"><a></a></icons>Body
+                    <li><is class="icon-chevron-right"><a></a></is><is class="icon-chevron-up"><a></a></is>Body
                         <ul>
                             <% @bodies.each do |body| %>
                                 <li>
@@ -16,7 +16,7 @@
                             <% end %>
                         </ul>
                     </li>
-                    <li><icons class="icon-chevron-right"><a></a></icons><icons class="icon-chevron-up"><a></a></icons>Make
+                    <li><is class="icon-chevron-right"><a></a></is><is class="icon-chevron-up"><a></a></is>Make
                         <ul>
                             <% @makes.each do |make| %>
                                 <li>
@@ -25,7 +25,7 @@
                             <% end %>
                         </ul>
                     </li>
-                    <li><icons class="icon-chevron-right"><a></a></icons><icons class="icon-chevron-up"><a></a></icons>Models
+                    <li><is class="icon-chevron-right"><a></a></is><is class="icon-chevron-up"><a></a></is>Models
                         <ul>
                             <% @models.each do |model| %>
                                 <li>
