--- a/app/views/bike_specs/show.html.erb
+++ b/app/views/bike_specs/show.html.erb
@@ -87,8 +87,8 @@
     </legend>
       <a id= "basic_info">
         Basic Info 
-        <icons class="icon-chevron-right"> </icons>
-        <icons class="icon-chevron-up"> </icons>
+        <is class="icon-chevron-right"> </is>
+        <is class="icon-chevron-up"> </is>
       </a><div class= "basic_info">
     <table class= "table table-striped">
     <tr>
@@ -170,8 +170,8 @@
       </div></div>
       <div class = "spec_toggle">
         <a id= "dimension">Dimension
-        <icons class="icon-chevron-right"> </icons>
-        <icons class="icon-chevron-up"> </icons>
+        <is class="icon-chevron-right"> </is>
+        <is class="icon-chevron-up"> </is>
         </a><div class= "dimension">
 
         <table class= "table table-striped">
@@ -195,8 +195,8 @@
       </div></div>
       <div class = "spec_toggle">
         <a id= "other_spec">Other Specification
-         <icons class="icon-chevron-right"> </icons>
-        <icons class="icon-chevron-up"> </icons></a>
+         <is class="icon-chevron-right"> </is>
+        <is class="icon-chevron-up"> </is></a>
         <div class= "other_spec">
         <table class= "table table-striped">
       <tr>
@@ -259,8 +259,8 @@
       </div></div>
       <div class = "spec_toggle">
         <a id= "safety">Active and Passive Safety
-         <icons class="icon-chevron-right"> </icons>
-        <icons class="icon-chevron-up"> </icons></a>
+         <is class="icon-chevron-right"> </is>
+        <is class="icon-chevron-up"> </is></a>
       <div class= "safety">
       <table class= "table table-striped">
         <td>Suspension Front</td>
@@ -291,8 +291,8 @@
       </div></div>
       <div class = "spec_toggle">
         <a id= "comfort">Comfort and Convienience
-         <icons class="icon-chevron-right"> </icons>
-        <icons class="icon-chevron-up"> </icons></a>
+         <is class="icon-chevron-right"> </is>
+        <is class="icon-chevron-up"> </is></a>
         <div class= "comfort">
         <table class= "table table-striped">
 
