--- a/app/views/bikes/show.html.erb
+++ b/app/views/bikes/show.html.erb
@@ -7,28 +7,28 @@
     
     <div class = "toolbox">
       <legend>Toolbox</legend>
-     <icons class = " icon-chevron-left"> </icons> <%= link_to " Back to search", bikes_path(sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location])%>
+     <is class = " icon-chevron-left"> </is> <%= link_to " Back to search", bikes_path(sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location])%>
       <div class = "save_search">
         <% if current_user and current_user.favourites.where(bike_id: @bike.id).empty?%>
-          <icons class = "icon-star"></icons><a id= "save_search" style="cursor:pointer"> Save Search</a>
+          <is class = "icon-star"></is><a id= "save_search" style="cursor:pointer"> Save Search</a>
         <%elsif !current_user%>
-         <icons class = "icon-star"></icons>
+         <is class = "icon-star"></is>
           <a href="#" data-toggle="tooltip" title="Sign in First" style="cursor:pointer">Save Search</a>
         <%else%>
           Saved
         <%end%>
       </div>
       <div>
-      <a href="#send_to_friend" data-toggle="modal"><icons class= "icon-envelope"></icons> Send to Friend</a>
+      <a href="#send_to_friend" data-toggle="modal"><is class= "icon-envelope"></is> Send to Friend</a>
       </div>
       <div><a id = "share" style="cursor:pointer">
-            <icons class = "icon-share"> </icons>Share on Facebook
+            <is class = "icon-share"> </is>Share on Facebook
           </a>
       </div>
     <% if @bike.user==current_user%>
-   <div><icons class = "icon-edit"></icons><%= link_to ' Edit this Post', edit_bike_path(@bike) %></div>
+   <div><is class = "icon-edit"></is><%= link_to ' Edit this Post', edit_bike_path(@bike) %></div>
    <div>
-      <icons class = "icon-trash"></icons><%= link_to ' Remove this Post',bike_path(@bike),:method => 'delete',
+      <is class = "icon-trash"></is><%= link_to ' Remove this Post',bike_path(@bike),:method => 'delete',
               :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) %>
   </div>  
   <%end%>
@@ -111,8 +111,8 @@
   <div class="span6" id= "bike_spec_span_padding">
 <div class="span12" id= "bike_spec_span">
   <legend>
-    <a href="<%bikes_path(@bike)%>" data-remote="true" id="more">Bike Info <icons class= "icon-chevron-down"> </icons></a>
-    <a id = "less"> Bike Info <icons class= "icon-chevron-down"> </icons><icons class= "icon-chevron-up"> </icons></a>
+    <a href="<%bikes_path(@bike)%>" data-remote="true" id="more">Bike Info <is class= "icon-chevron-down"> </is></a>
+    <a id = "less"> Bike Info <is class= "icon-chevron-down"> </is><is class= "icon-chevron-up"> </is></a>
   </legend>
 </div>
 </div>
