--- a/app/views/bikes/show.html.erb
+++ b/app/views/bikes/show.html.erb
@@ -7,28 +7,28 @@
     
     <div class = "toolbox">
       <legend>Toolbox</legend>
-     <is class = " icon-chevron-left"> </is> <%= link_to " Back to search", bikes_path(sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location])%>
+     <i class = " icon-chevron-left"> </i> <%= link_to " Back to search", bikes_path(sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location])%>
       <div class = "save_search">
         <% if current_user and current_user.favourites.where(bike_id: @bike.id).empty?%>
-          <is class = "icon-star"></is><a id= "save_search" style="cursor:pointer"> Save Search</a>
+          <i class = "icon-star"></i><a id= "save_search" style="cursor:pointer"> Save Search</a>
         <%elsif !current_user%>
-         <is class = "icon-star"></is>
+         <i class = "icon-star"></i>
           <a href="#" data-toggle="tooltip" title="Sign in First" style="cursor:pointer">Save Search</a>
         <%else%>
           Saved
         <%end%>
       </div>
       <div>
-      <a href="#send_to_friend" data-toggle="modal"><is class= "icon-envelope"></is> Send to Friend</a>
+      <a href="#send_to_friend" data-toggle="modal"><i class= "icon-envelope"></i> Send to Friend</a>
       </div>
       <div><a id = "share" style="cursor:pointer">
-            <is class = "icon-share"> </is>Share on Facebook
+            <i class = "icon-share"> </i>Share on Facebook
           </a>
       </div>
     <% if @bike.user==current_user%>
-   <div><is class = "icon-edit"></is><%= link_to ' Edit this Post', edit_bike_path(@bike) %></div>
+   <div><i class = "icon-edit"></i><%= link_to ' Edit this Post', edit_bike_path(@bike) %></div>
    <div>
-      <is class = "icon-trash"></is><%= link_to ' Remove this Post',bike_path(@bike),:method => 'delete',
+      <i class = "icon-trash"></i><%= link_to ' Remove this Post',bike_path(@bike),:method => 'delete',
               :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) %>
   </div>  
   <%end%>
@@ -111,8 +111,8 @@
   <div class="span6" id= "bike_spec_span_padding">
 <div class="span12" id= "bike_spec_span">
   <legend>
-    <a href="<%bikes_path(@bike)%>" data-remote="true" id="more">Bike Info <is class= "icon-chevron-down"> </is></a>
-    <a id = "less"> Bike Info <is class= "icon-chevron-down"> </is><is class= "icon-chevron-up"> </is></a>
+    <a href="<%bikes_path(@bike)%>" data-remote="true" id="more">Bike Info <i class= "icon-chevron-down"> </i></a>
+    <a id = "less"> Bike Info <i class= "icon-chevron-down"> </i><i class= "icon-chevron-up"> </i></a>
   </legend>
 </div>
 </div>
