--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -156,12 +156,8 @@ var div =1
             "position" : 'fixed',
             "width": '226',
             "margin-top": 63,
-            "top" : 0 });
-        $(".icon-remove").css({
-          "position": "fixed",
-          "left": "28%"
-          
-        })
+            "top" : 0});
+        
         $('.sidebar-nav').css({ 
             "position" : 'fixed',
             "width": '226',
@@ -172,11 +168,12 @@ var div =1
             "width": '708',
             "height": '18',
             "margin-top": 63,
-            "top" : 0 });
+            "top" : 0 , 
+            "background": "#0070B7"});
     } else {
         $('.current_selection').css({ "position" : 'relative', "top" : 0,"margin-top": 0, "width" : '100%' });
         $('.sidebar-nav').css({ "position" : 'relative', "top" : 0,"margin-top": 0, "width" : '100%' });
-         $('.header').css({ "position" : 'relative', "top" : 0,"margin-top": 0,"width": '708' });
+         $('.header').css({ "position" : 'relative', "top" : 0,"margin-top": 0,"width": '708', "background": "#56B8B4" });
          $(".icon-remove").css({
           "position": "absolute",
           "left":"84%"
