--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,12 +82,12 @@
           </div>
         </div>
       </div>
-
-      <div class="container-fluid">
-        <div class="row-fluid">
-          <div class= "span12" id="main_page_header">
+        <div id="main_page_header">
             <%= render "shared/logo"%>
-          </div>
+        </div>
+      <div class="container-fluid">
+
+        <div class="row-fluid">
           <div class="span12">
             <%= yield %>
           </div>
