--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -2,7 +2,7 @@
 body 
 { 
 	padding-top: 80px;
-	padding-left: 20px;
+	padding-left: 0px;
 }
 
 @import "twitter/bootstrap/responsive";
@@ -97,7 +97,13 @@ body
 	color: white;
 	z-index: 1
 }
-
+@media(min-width: 767px)
+{
+	.header
+	{
+		background: #56B8B4
+	}
+}
 .result_div 
 {
 	border: 2px solid #F1F1F1;
@@ -109,8 +115,7 @@ body
 {
 	.icon-remove 
 	{
-		position: absolute;
-		left: 28%;
+		
 
 	}
 }
@@ -209,13 +214,7 @@ body
 	font-weight: bold;
 }
 
-#main_page_header 
-{
-	margin: 20px;
-	height: 100px;
-	//background: white;
-	padding: 15px;
-}
+
 
 #main_page_border 
 {
@@ -1161,46 +1160,51 @@ border-top-left-radius: 101px;
 border-top-right-radius: 112px;
 border-bottom-right-radius: 9px;
 box-shadow: 16px 0px 36px rgba(7, 2, 2, 0.53);
+margin-top: 35px;
+
+}
+#main_page_header 
+{
+	margin: 0px;
+	height: 100px;
+	padding: 0px;
+	margin-bottom: 46px;
+	margin-top: -16px;
+	padding-bottom: 20px;
+
 }
 .logo {
 font-size: 30px;
 
-background: -moz-linear-gradient(top,  rgba(30,87,153,1) 0%, rgba(125,185,232,0) 100%);
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(30,87,153,1)), color-stop(100%,rgba(125,185,232,0)));
-background: -webkit-linear-gradient(top,  rgba(30,87,153,1) 0%,rgba(125,185,232,0) 100%);
-background: -o-linear-gradient(top,  rgba(30,87,153,1) 0%,rgba(125,185,232,0) 100%);
-background: -ms-linear-gradient(top,  rgba(30,87,153,1) 0%,rgba(125,185,232,0) 100%);
-background: linear-gradient(to bottom,  rgba(30,87,153,1) 0%,rgba(125,185,232,0) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#007db9e8',GradientType=0 );
+background: rgba(39, 112, 168, 1);
 
-border-top-left-radius: 95px;
-border-top-right-radius: 123px;
+color: #f1f1f1;
 z-index: -1;
 width: 100%;
 position: relative;
 text-indent: -10px;
-
+padding-bottom: 65px;
 }
 @media(min-width: 769px){
 	#main_page_border {
 margin-top: 0px;
 }
 }
-#main_page_header {
-margin-bottom: 46px;
-}
-@media(max-width: 624px) and (min-width: 462px){
-.logo {
-font-size: 14px;
+@media(max-width: 767px){
+	#main_page_header {
 
+margin-left: -20px;
+margin-right: -20px;
 }
 }
-@media(max-width: 462px){
-.logo {
-font-size: 0px;
-background: transparent
+@media(max-width: 736px) 
+{
+	.logo 
+	{
+		font-size: 0px;
+	}
 }
-}
+
 a#logo_link{
 	color:black;
 }
@@ -1292,20 +1296,12 @@ a#logo_link:hover {
 .showroom_header 
 {
 	padding: 15px;
-	margin-top: 15px;
 	font-size: 18px;
 	box-shadow: 3px 2px 5px #888888;
 	font-weight: bold;
-	color: white;
+	color: black;
 	
-	background: #1e589a;
-	background: -moz-linear-gradient(top,  #1e589a 0%, #207bca 37%, #2a8ad8 64%, #7ebae8 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#1e589a), color-stop(37%,#207bca), color-stop(64%,#2a8ad8), color-stop(100%,#7ebae8));
-	background: -webkit-linear-gradient(top,  #1e589a 0%,#207bca 37%,#2a8ad8 64%,#7ebae8 100%);
-	background: -o-linear-gradient(top,  #1e589a 0%,#207bca 37%,#2a8ad8 64%,#7ebae8 100%);
-	background: -ms-linear-gradient(top,  #1e589a 0%,#207bca 37%,#2a8ad8 64%,#7ebae8 100%);
-	background: linear-gradient(to bottom,  #1e589a 0%,#207bca 37%,#2a8ad8 64%,#7ebae8 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e589a', endColorstr='#7ebae8',GradientType=0 );
+	background: #C0C5C4;
 
 }
 .showroom_search 
