--- a/app/views/about_us/index.html.erb
+++ b/app/views/about_us/index.html.erb
@@ -28,13 +28,13 @@
       <div class="span2">
           <%=image_tag "romal.jpg",:size=>"170x170"%>
           <h3>Romal</h3>
-          <p><span>Founder &amp; Tech &amp; Design</span> </p>
+          <p><span>Founder, Tech &amp; Design</span> </p>
       </div>
       <div class= "span1"></div>
       <div class="span2">
            <%=image_tag "bidhan.jpg", :size=>"170x170"%>
           <h3>Bidhan</h3>
-          <p><span>Founder &amp; Tech &amp; Design</span> </p>
+          <p><span>Founder, Tech &amp; Design</span> </p>
       </div>
   </div>
 </div>
