--- a/app/views/bikes/_send_to_friend_modal.html.erb
+++ b/app/views/bikes/_send_to_friend_modal.html.erb
@@ -25,7 +25,7 @@
     </div>
   </div>
   </div><div class="control-group">
-    <label class="control-label">Cooment: </label>
+    <label class="control-label">Comment: </label>
     <div class="controls">
     <%= text_area_tag :comment, nil,:class => 'textarea', rows: "4", maxlength:"200", required: "true" %>
     </div>
