--- a/app/views/user_mailer/send_to_friend.html.erb
+++ b/app/views/user_mailer/send_to_friend.html.erb
@@ -23,7 +23,7 @@
 		</table>
 		<hr />
 		<p>
-			&nbsp;<span style="color: rgb(68, 68, 68); font-family: Arial; font-size: 12px; line-height: 17px; background-color: rgb(255, 255, 255);">The following vehicle details were sent to <%=@name%>&nbsp;</span></p>
+			&nbsp;<span style="color: rgb(68, 68, 68); font-family: Arial; font-size: 12px; line-height: 17px; background-color: rgb(255, 255, 255);">The following vehicle details were sent to <%=@name%>&nbsp; by <%= @sender%></span></p>
 		<br />
 
 			<b style="line-height: 17px; color: rgb(68, 68, 68); font-family: Arial; font-size: 12px; background-color: rgb(255, 255, 255);">COMMENTS:</b><span style="color: rgb(68, 68, 68); font-family: Arial; font-size: 12px; line-height: 17px; background-color: rgb(255, 255, 255);">&nbsp;<%=@comment%>&nbsp;</span></p>
