--- a/app/views/bike_specs/show.html.erb
+++ b/app/views/bike_specs/show.html.erb
@@ -1,8 +1,8 @@
 
 
 
-<div class = "row">
-  
+<div class = "row" id= "spec_show_page">
+ 
 
   <div class = "span6" >
 
@@ -76,6 +76,7 @@
       </table>
     </div>
 </div>
+ 
 </div>
     <div class = "row">
 <div class = "span6" id= "bottom_margin">
@@ -87,8 +88,8 @@
     </legend>
       <a id= "basic_info">
         Basic Info 
-        <i class="icon-chevron-right"> </>
-        <i class="icon-chevron-up"> </>
+        <i class="icon-chevron-right"> </i>
+        <i class="icon-chevron-up"> </i>
       </a><div class= "basic_info">
     <table class= "table table-striped">
     <tr>
@@ -170,8 +171,8 @@
       </div></div>
       <div class = "spec_toggle">
         <a id= "dimension">Dimension
-        <i class="icon-chevron-right"> </>
-        <i class="icon-chevron-up"> </>
+        <i class="icon-chevron-right"> </i>
+        <i class="icon-chevron-up"> </i>
         </a><div class= "dimension">
 
         <table class= "table table-striped">
@@ -195,8 +196,8 @@
       </div></div>
       <div class = "spec_toggle">
         <a id= "other_spec">Other Specification
-         <i class="icon-chevron-right"> </>
-        <i class="icon-chevron-up"> </></a>
+         <i class="icon-chevron-right"> </i>
+        <i class="icon-chevron-up"> </i></a>
         <div class= "other_spec">
         <table class= "table table-striped">
       <tr>
@@ -259,8 +260,8 @@
       </div></div>
       <div class = "spec_toggle">
         <a id= "safety">Active and Passive Safety
-         <i class="icon-chevron-right"> </>
-        <i class="icon-chevron-up"> </></a>
+         <i class="icon-chevron-right"> </i>
+        <i class="icon-chevron-up"> </i></a>
       <div class= "safety">
       <table class= "table table-striped">
         <td>Suspension Front</td>
@@ -291,8 +292,8 @@
       </div></div>
       <div class = "spec_toggle">
         <a id= "comfort">Comfort and Convienience
-         <i class="icon-chevron-right"> </>
-        <i class="icon-chevron-up"> </></a>
+         <i class="icon-chevron-right"> </i>
+        <i class="icon-chevron-up"> </i></a>
         <div class= "comfort">
         <table class= "table table-striped">
 
