--- a/app/views/bikes/new.html.erb
+++ b/app/views/bikes/new.html.erb
@@ -1,6 +1,7 @@
+<div class = "bike_new_page">
 <%- model_class = @bike.class -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => t('helpers.titles.new', :model => model_class.model_name.human,
-                                 :default => "New #{model_class.model_name.human}") %></h1>
+  <legend>New Bike AD</legend>
 </div>
 <%= render :partial => 'form' %>
+</div>
