--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,9 @@
                               </button>
                               <ul class="dropdown-menu">
                                 <!-- dropdown menu links -->
-                                <li><a href="<%=profile_user_path(current_user)%>" >Profile </a></li>
+                                <li><a href="<%=profile_user_path(current_user)%>" ><i class= "icon-asterisk"></i> Profile </a></li>
+                                <li><a href="<%= edit_user_registration_path(@user)%>"><i class= "icon-edit"></i> Edit</a></li>
+                                <li class="divider"></li>
                                 <li><%= link_to "Sign Out", destroy_user_session_path, method: "delete"  %>
                          
                                 </li>
