--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -173,7 +173,7 @@ var div =1
     } else {
         $('.current_selection').css({ "position" : 'relative', "top" : 0,"margin-top": 0, "width" : '100%' });
         $('.sidebar-nav').css({ "position" : 'relative', "top" : 0,"margin-top": 0, "width" : '100%' });
-         $('.header').css({ "position" : 'relative', "top" : 0,"margin-top": 0,"width": '708', "background": "#56B8B4" });
+         $('.header').css({ "position" : 'relative', "top" : 0,"margin-top": 0,"width": '708', "background": "#2a2a2a" });
          $(".icon-remove").css({
           "position": "absolute",
           "left":"84%"
