--- a/app/views/bikes/show.html.erb
+++ b/app/views/bikes/show.html.erb
@@ -203,7 +203,7 @@ $("form#send_to_friend").submit(function(event) {
 
 });
 
-$('ul.image_list li').hover(function() {
+$('ul.image_list li').click(function() {
 
 
   var id= "<%=@bike.id%>";
