--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -101,7 +101,7 @@ body
 {
 	.header
 	{
-		background: #56B8B4;
+		background: #2a2a2a;
 		padding-bottom:14px
 	}
 }
@@ -153,6 +153,15 @@ body
 {
 	bottom: 0;
 	height: 31px;
+}
+@media (min-width: 769px) and (max-width: 979px)
+{
+	.navbar-fixed-top
+	{
+		
+		padding-left: 20px;
+		padding-right: 20px;
+	}
 }
 @media (min-width: 768px) and (max-width: 979px)
 {
@@ -789,6 +798,7 @@ div.input-prepend
 {
 	background: white;
 	padding: 15px;
+	padding-top: 8px;
 }
 
 //**********************************END OF SHOW PAGE*************************************************
@@ -985,7 +995,7 @@ legend
 		padding-left: 0px;
 	}
 }
-@media (min-width:600px) and (max-width: 696px)
+@media (min-width:600px) and (max-width: 800px)
 {
 	.navbar .btn-group .btn 
 	{
@@ -1482,3 +1492,6 @@ ul#selection li ul li
 	}
 }
 
+#spec_show_page_header {
+margin-top: -27px;
+}
