--- a/app/views/bike_specs/index.html.erb
+++ b/app/views/bike_specs/index.html.erb
@@ -80,7 +80,6 @@
 </div>
 </div>
 </div>
-<%= link_to 'New Bike spec', new_bike_spec_path %>
 <script type="text/javascript">
 var div =1
  $(window).scroll(function() 
@@ -124,11 +123,12 @@ var div =1
             "width": '708',
             "height": '18',
             "margin-top": 63,
+            "background": "#0070B7",
             "top" : 0 });
     } else {
         $('.current_selection').css({ "position" : 'relative', "top" : 0,"margin-top": 0, "width" : '100%' });
         $('.sidebar-nav').css({ "position" : 'relative', "top" : 0,"margin-top": 0, "width" : '100%' });
-         $('.header').css({ "position" : 'relative', "top" : 0,"margin-top": 0,"width": '708' });
+         $('.header').css({ "position" : 'relative', "top" : 0,"margin-top": 0,"width": '708', "background": "#2a2a2a" });
          $(".icon-remove").css({
           "position": "absolute",
           "left":"84%"
