--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -130,7 +130,30 @@
 
       <%= javascript_include_tag "application" %>
       <%= javascript_include_tag "facebook" %>
+      <script  data-cfasync="false" type="text/javascript">
+            $(window).resize(function() {
 
+                if ($(window).width() <= 979 && $(window).width() >=600){
+                    setTimeout(function() {
+                        $("#toggle").trigger('click');
+                    },1);}
+
+                     
+              });
+          if ($(window).width() <= 979 && $(window).width() >=600){
+              setTimeout(function() {
+                  $("#toggle").trigger('click');
+              },1);}
+
+             var width= $(window).width()/5
+              
+                $("div.logo").animate({
+            
+            textIndent: width,
+
+            
+          }, 3600 );
+      </script>    
 
       <div class="navbar navbar-fixed-bottom">
         <div class="navbar-inner">
