--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -33,7 +33,40 @@ body
 // Example:
 // @linkColor: #ff0000;
 
+	.row 
+	{
+		margin-left: 0px;
+	}
+	.row-fluid 
+	{
+		width: 979px;
+		margin: auto;
+	}
 
+@media (max-width: 979px)
+{
+.row 
+{
+	margin-left: 0px;
+}
+
+.row-fluid 
+{
+	width: 100%;
+}
+}
+@media (min-width: 979px)
+{
+	.row 
+	{
+		margin-left: 0px;
+	}
+	.row-fluid 
+	{
+		width: 979px;
+		margin: auto;
+	}
+}
 
 .ad_title 
 {
@@ -1474,22 +1507,3 @@ ul#selection li ul li
 #spec_show_page_header {
 margin-top: -27px;
 }
-
-.row 
-{
-	margin-left: 0px;
-}
-
-.row-fluid 
-{
-	width: 100%;
-}
-.row 
-	{
-		margin-left: 0px;
-	}
-	.row-fluid 
-	{
-		width: 979px;
-		margin: auto;
-	}
