--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -33,15 +33,15 @@ body
 // Example:
 // @linkColor: #ff0000;
 
-	.row 
-	{
-		margin-left: 0px;
-	}
-	.row-fluid 
-	{
-		width: 979px;
-		margin: auto;
-	}
+.row 
+{
+	margin-left: 0px;
+}
+.row-fluid 
+{
+	width: 979px;
+	margin: auto;
+}
 
 @media (max-width: 979px)
 {
@@ -124,14 +124,6 @@ body
 	border-radius: 15px;
 }
 
-@media (min-width: 980px)
-{
-	.icon-remove 
-	{
-		
-
-	}
-}
 @media (min-width:100px) and (max-width: 480px)
 {
 	.icon-remove 
@@ -1242,17 +1234,20 @@ position: relative;
 text-indent: -10px;
 padding-bottom: 44px;
 }
-@media(min-width: 769px){
-	#main_page_border {
-margin-top: 0px;
+@media(min-width: 769px)
+{
+	#main_page_border 
+	{
+		margin-top: 0px;
+	}
 }
-}
-@media(max-width: 767px){
-	#main_page_header {
-
-margin-left: -20px;
-margin-right: -20px;
-}
+@media(max-width: 767px)
+{
+	#main_page_header 
+	{
+		margin-left: -20px;
+		margin-right: -20px;
+	}
 }
 @media(max-width: 736px) 
 {
@@ -1262,10 +1257,12 @@ margin-right: -20px;
 	}
 }
 
-a#logo_link{
+a#logo_link
+{
 	color:black;
 }
-a#logo_link:hover {
+a#logo_link:hover 
+{
 	color:black;
 	backgroung: transparent;
 	text-decoration: none;
