--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,9 @@
   <%= javascript_include_tag "jquery.min" %>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="msvalidate.01" content="510ACF7858C360DAA9E4A9B854ADD66E" />
+
+      <meta name="google-site-verification" content="32_zx750zT1Sza8yRMpdrHe4P8pPJRlW-DWrO0R1rkA" />
       <title><%= content_for?(:title) ? yield(:title) : "Bikesales" %></title>
       <%= csrf_meta_tags %>
 
@@ -13,7 +16,15 @@
       <![endif]-->
 
       <%= stylesheet_link_tag "application", :media => "all" %>
+      <script type="text/javascript">
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+    ga('create', 'UA-41955848-1', 'bechnu.com');
+    ga('send', 'pageview');
+</script>
 
       <%=favicon_link_tag 'favicon.ico'%>
       <link href="images/apple-touch-icon.png" rel="apple-touch-icon">
