--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -227,7 +227,14 @@ body
 	margin: 5px;
 	font-weight: bold;
 }
-
+.navbar .nav > li > a#toggle {
+float: none;
+padding: 7px 10px 7px;
+line-height: 19px;
+color: #999999;
+text-decoration: none;
+text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+}
 
 
 #main_page_border 
