--- a/app/views/bikes/main_page.html.erb
+++ b/app/views/bikes/main_page.html.erb
@@ -1,4 +1,4 @@
-
+<fieldset>
   <div id="main_page_border" class= "span12">
     <div class= "span9">
       <div class = "main_page">
@@ -141,7 +141,7 @@
     </div>
     </div><!--row-->
   </div>
-
+</fieldset>
     
     
 
